--- a/Medical_Store-main/Medical_Store/src/main/resources/application.properties
+++ b/Medical_Store-main/Medical_Store/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=
 
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.Type = TRACE
-
+logging.level.root=DEBUG
 #logging.level.org.thymeleaf=DEBUG
 
 
